# gitshelf

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  MANIFEST.in  README.md  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Gitshelf  gitshelf-ae1.yml  gitshelf-aw2.yml  gitshelf-diagram.shapes  gitshelf-paas-core-aw2.yml  gitshelf-w-tokens.yml  gitshelf.yml
gitshelf/: __init__.py  book.py  exceptions.py  shell.py  utils.py  version.py
gitshelf/cli/: __init__.py  diff.py  discover.py  install.py  status.py
gitshelf/tests/: __init__.py
tools/: pip-requires
