[metadata]
name = gitshelf
summary = Manage a shelf full of git repos
description-file =
    README
author = Simon McCartney
author-email = simon.mccartnet@hp.com
home-page = https://github.com/gitshelf/gitshelf
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gitshelf

[entry_points]
console_scripts =
    gitshelf = gitshelf.shell:main

gitshelf.cli =
    install = gitshelf.cli.install:GitShelfInstallCommand
    status = gitshelf.cli.status:GitShelfStatusCommand
    diff = gitshelf.cli.diff:GitShelfDiffCommand
    discover = gitshelf.cli.discover:GitShelfDiscoverCommand

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[upload_docs]
upload-dir = doc/build/html

[compile_catalog]
directory = gitshelf/locale
domain = gitshelf

[update_catalog]
domain = gitshelf
output_dir = gitshelf/locale
input_file = gitshelf/locale/saltmc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gitshelf/locale/gitshelf.pot

[wheel]
universal = 1

[nosetests]
cover-package=gitshelf
cover-html=true
cover-erase=true
cover-inclusive=true
verbosity=2
detailed-errors=1
where=gitshelf/tests

[pycodestyle]
max-line-length=120
